--- a/samples/ApiExamples/00ConfigureAndConnect/00ConfigureAndConnect.csproj
+++ b/samples/ApiExamples/00ConfigureAndConnect/00ConfigureAndConnect.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>_00ConfigureAndConnect</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JoeScan.Pinchot" Version="10.1.0-beta.353" />
+    <PackageReference Include="JoeScan.Pinchot" Version="12.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
