Update Pinchot .NET API source to v13.1.0

--- a/samples/ApiExamples/02AdvancedScanning/02AdvancedScanning.csproj
+++ b/samples/ApiExamples/02AdvancedScanning/02AdvancedScanning.csproj
@@ -4,14 +4,11 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>_02AdvancedScanning</RootNamespace>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JoeScan.Pinchot" Version="13.0.1" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="JoeScan.Pinchot" Version="13.1.0" />
   </ItemGroup>
 
 </Project>
