--- a/src/JoeScan.Pinchot/JoeScan.Pinchot.csproj
+++ b/src/JoeScan.Pinchot/JoeScan.Pinchot.csproj
@@ -23,6 +23,7 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
   </PropertyGroup>
 
   <Import Project="..\JoeScan.Pinchot.Shared\JoeScan.Pinchot.Shared.projitems" Label="Shared" />
