Update Pinchot .NET API source to v13.1.3

--- a/samples/ApiExamples/00ConfigureAndConnect/00ConfigureAndConnect.csproj
+++ b/samples/ApiExamples/00ConfigureAndConnect/00ConfigureAndConnect.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JoeScan.Pinchot" Version="13.1.1" />
+    <PackageReference Include="JoeScan.Pinchot" Version="13.1.*" />
   </ItemGroup>
 
 </Project>
